# birth-tunes-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: wake_up.yml
alembic/: env.py
alembic/versions/: 65abbb7d178e_change_column_name_content_url_youtube_.py  7423197cd438_change_unique_index_to_use_only_base_.py  9139609ae382_create_models.py  94d521b524fa_add_index_to_song_base_date.py
app/: auth.py  config.py  constants.py  crud.py  database.py  main.py  models.py  router.py  schemas.py
