[tool.poetry]
name = "birth-tunes-backend"
version = "0.1.0"
description = ""
authors = ["Eunjeong Park <ejolie.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
alembic = "^1.11.3"
requests = "^2.31.0"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.5"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
